--- a/.github/workflows/docker_image_builder.yml
+++ b/.github/workflows/docker_image_builder.yml
@@ -15,7 +15,6 @@ on:
   workflow_dispatch:
 
 env:
-  #BUCKET_NAME : "github-oidc-test-mitch"
   AWS_REGION : "us-east-1"
   PROJECT_FILES_GIT : "sba-project-properties.git"
   PROJECT_FILES_NAME: "project.properties"
@@ -80,7 +79,7 @@ jobs:
           uses: actions/checkout@v2
           with:
             token: ${{ secrets.envPAT }}
-            repository: mitchboulay/sba-project-properties
+            repository: simple-business-apps/sba-project-properties
             ref: main
             path: ${{env.PROJECT_FILES_DIRECTORY}}
         
@@ -176,11 +175,11 @@ jobs:
             docker push $DOCKER_TAG_VERSION
             docker push $DOCKER_TAG_LATEST
         
-        # - name: Lambda function name
-        #   run: |
-        #     echo LAMBDA_FUNCTION_NAME="${{inputs.lambd_function_name}}-${{ env.AWS_ENV_NAME }}" >> $GITHUB_ENV
+        - name: Lambda function name
+          run: |
+            echo LAMBDA_FUNCTION_NAME="${{inputs.lambd_function_name}}" >> $GITHUB_ENV
         
-        # - name: Update function with new image built
-        #   if: ${{ steps.repo_name_passed.outputsreponamepassed !='true' && steps.get_cdk_destroy_stack.outputs.cdk_destroy_stack != 'true' && steps.ecr_login.outputs.repo_created =='false' && steps.skip_dk_build.outputs.bypass_dk_build !='true'}} 
-        #   run: |
-        #     (aws lambda update-function-code --region ${{ env.AWS_REGION }} --function-name $LAMBDA_FUNCTION_NAME --image-uri $DOCKER_TAG_VERSION ) || ( echo "Function not found" )
+        - name: Update function with new image built
+          if: ${{ steps.repo_name_passed.outputsreponamepassed !='true' && steps.get_cdk_destroy_stack.outputs.cdk_destroy_stack != 'true' && steps.ecr_login.outputs.repo_created =='false' && steps.skip_dk_build.outputs.bypass_dk_build !='true'}} 
+          run: |
+            (aws lambda update-function-code --region ${{ env.AWS_REGION }} --function-name $LAMBDA_FUNCTION_NAME --image-uri $DOCKER_TAG_VERSION ) || ( echo "Function not found" )
