--- a/.github/workflows/host_ui_frontend.yml
+++ b/.github/workflows/host_ui_frontend.yml
@@ -159,7 +159,7 @@ jobs:
         - name: Get project constants from project.properties repo - Branch name, deployment role, skip cdk, destroy stack
           id: project_constants
           run: |
-            account_id="`grep aws-strc-development ${{env.PROJECT_FILES_NAME}}|cut -d'=' -f2`"
+            account_id="`grep aws-strc-development ${{env.PROJECT_FILES_DIRECTORY}}/${{env.PROJECT_FILES_NAME}}|cut -d'=' -f2`"
             echo "::set-output name=env_id::${account_id}"
             echo "AWS_ENVRIONMENT=${account_id}" >> $GITHUB_ENV
         
