--- a/.github/workflows/host_ui_frontend.yml
+++ b/.github/workflows/host_ui_frontend.yml
@@ -192,7 +192,7 @@ jobs:
         - name: Build react Frontend
           if: ${{inputs.build_project_type == 'react'}}
           run: |
-            npm ci
+            npm install
             if [[ ${BRANCH_NAME} == 'main' ]]
             then
               npm run build
