--- a/.github/workflows/host_ui_frontend.yml
+++ b/.github/workflows/host_ui_frontend.yml
@@ -205,12 +205,12 @@ jobs:
               npm run build
             fi
 
-        # - name: Build react Frontend2
-        #   if: ${{inputs.build_argon2 == 'react'}}
-        #   run: |
+        - name: Build react Frontend2
+          if: ${{inputs.build_argon2 == 'react'}}
+          run: |
             
-        #     npm install --save react@latest --force
-        #     npm run build
+            npm install --save react@latest --force
+            npm run build
 
         - name: Install yaml
           run: |
