--- a/.github/workflows/host_ui_frontend.yml
+++ b/.github/workflows/host_ui_frontend.yml
@@ -190,6 +190,12 @@ jobs:
           echo "::set-output name=env_id::${account_id}"
           echo "AWS_ENVRIONMENT=${account_id}" >> $GITHUB_ENV
 
+      - name: Arn to use
+        id: aws_assume_role
+        run: |
+          echo "::set-output name=role_arn1::arn:aws:iam::${{ steps.project_constants.outputs.env_id }}:role/hh-github-oidc-access-role"
+          echo "AWS_ASSUME_ROLE=arn:aws:iam::${{ steps.project_constants.outputs.env_id }}:role/hh-github-oidc-access-role" >> $GITHUB_ENV
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@master
         with:
