--- a/.github/workflows/docker_image_builder.yml
+++ b/.github/workflows/docker_image_builder.yml
@@ -107,26 +107,25 @@ jobs:
         run: chmod -R 755 ./
 
       # Read of project files and set to variables
+      # Read of project files and set to variables
       - name: Get project constants from project.properties repo - Branch name, deployment role, skip cdk, destroy stack
         id: project_constants
         run: |
           account_id="`grep aws_${BRANCH_NAME}_account ${{env.PROJECT_FILES_NAME}}|cut -d'=' -f2`"
-          echo "::set-output name=env_id::${account_id}"
-          echo "AWS_ENVRIONMENT=${account_id}" >> $GITHUB_ENV
+          echo "AWS_ENVIRONMENT=${account_id}" >> $GITHUB_ENV
 
         working-directory: ${{env.PROJECT_FILES_DIRECTORY}}
 
       - name: Arn to use
         id: aws_assume_role
         run: |
-          echo "::set-output name=role_arn1::arn:aws:iam::${{ steps.project_constants.outputs.env_id }}:role/hh-github-oidc-access-role"
-          echo "AWS_ASSUME_ROLE=arn:aws:iam::${{ steps.project_constants.outputs.env_id }}:role/hh-github-oidc-access-role" >> $GITHUB_ENV
+          echo "::set-output name=role_arn1::arn:aws:iam::${{ env.AWS_ENVIRONMENT }}:role/hh-github-oidc-access-role"
+          echo "AWS_ASSUME_ROLE=arn:aws:iam::${{ env.AWS_ENVIRONMENT }}:role/hh-github-oidc-access-role" >> $GITHUB_ENV
 
       - name: Configure AWS credentials
-        id: aws_oidc_credentials
         uses: aws-actions/configure-aws-credentials@master
         with:
-          role-to-assume: ${{steps.aws_assume_role.outputs.role_arn1}}
+          role-to-assume: ${{env.AWS_ASSUME_ROLE}}
           role-session-name: ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}
           aws-region: ${{ env.AWS_REGION }}
 
