--- a/.github/workflows/docker_image_builder.yml
+++ b/.github/workflows/docker_image_builder.yml
@@ -159,7 +159,7 @@ jobs:
       - name: ECR Registry
         run: |
           echo DOCKER_TAG_VERSION="${{ env.AWS_ENVIRONMENT }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${IMAGE_REPO_NAME}:${TAG_VERSION}" >> $GITHUB_ENV
-          echo DOCKER_TAG_LATEST=${{ env.AWS_ENVIRONMENT }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${IMAGE_REPO_NAME}:latest" >> $GITHUB_ENV
+          echo DOCKER_TAG_LATEST="${{ env.AWS_ENVIRONMENT }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${IMAGE_REPO_NAME}:latest" >> $GITHUB_ENV
 
       - name: ECR Registry name
         run: echo ${DOCKER_TAG_VERSION} is the docker version
