--- a/.github/workflows/host_ui_frontend.yml
+++ b/.github/workflows/host_ui_frontend.yml
@@ -11,13 +11,9 @@ on:
       build_project_type:
         required: true
         type: string
-      hosting_bucket_stack_id:
-        required: true
-        type: string
       hosting_bucket_key_name:
         required: true
         type: string
-
       in_stack_id:
         required: true
         type: string
@@ -249,13 +245,13 @@ jobs:
       - name: Deploy to S3 - Copy Build folder to s3
         run: |
 
-          HOSTING_BUCKET=$(aws cloudformation --region ${{ env.AWS_REGION }} describe-stacks --stack-name ${{inputs.hosting_bucket_stack_id}} --query "Stacks[0].Outputs[?OutputKey=='${{inputs.hosting_bucket_key_name}}'].OutputValue" --output text)
+          HOSTING_BUCKET=$(aws cloudformation --region ${{ env.AWS_REGION }} describe-stacks --stack-name ${{inputs.in_stack_id}} --query "Stacks[0].Outputs[?OutputKey=='${{inputs.hosting_bucket_key_name}}'].OutputValue" --output text)
           aws s3 sync ./$BUILD_DIRECTORY s3://${HOSTING_BUCKET}
 
       - name: Invalidate cloudfront cache
         run: |
           echo ${CF_ID_OUTPUT} is the output id
-          CLOUDFRONT_ID=$(aws cloudformation --region ${{ env.AWS_REGION }} describe-stacks --stack-name ${IN_STACK_ID} --query "Stacks[0].Outputs[?OutputKey=='${CF_ID_OUTPUT}'].OutputValue" --output text)
+          CLOUDFRONT_ID=$(aws cloudformation --region ${{ env.AWS_REGION }} describe-stacks --stack-name ${{inputs.in_stack_id}} --query "Stacks[0].Outputs[?OutputKey=='${CF_ID_OUTPUT}'].OutputValue" --output text)
           aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_ID --paths '/*'
 
       - name: Domain url
