--- a/.github/workflows/docker_image_builder.yml
+++ b/.github/workflows/docker_image_builder.yml
@@ -10,7 +10,7 @@ on:
         type: string
       app_runner:
         required: false
-        type: boolean
+        type: string
     secrets:
       envPAT:
         required: true
