Set docker build platform and add NX env step
Specify --platform=linux/amd64 for docker build to ensure images are built for amd64 architecture. Add a new workflow step to create NX environment variables: install boto3 and jproperties, back up existing .env to .env_old, run create_env_file.py and output the generated .env before proceeding to dependency installation. These changes improve build compatibility and ensure the frontend has required environment variables prepared.

--- a/.github/workflows/docker_image_builder.yml
+++ b/.github/workflows/docker_image_builder.yml
@@ -189,7 +189,7 @@ jobs:
         if: ${{steps.skip_dk_build.outputs.bypass_dk_build !='true'}}
         id: build_images
         run: |
-          docker build -t $DOCKER_TAG_VERSION .
+          docker build --platform linux/amd64 -t $DOCKER_TAG_VERSION .
           docker tag $DOCKER_TAG_VERSION $DOCKER_TAG_LATEST
 
       - name: ECR Login
